--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/work1?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/deal?serverTimezone=Asia/Shanghai
     username: chenli
     password: 190014
 mybatis-plus:
