--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,7 @@ spring:
     url: jdbc:mysql://localhost:3306/deal?serverTimezone=Asia/Shanghai
     username: chenli
     password: 190014
+  application:
+    name: deal
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
