--- a/src/main/resources/code-message.properties
+++ b/src/main/resources/code-message.properties
@@ -1,1 +1,9 @@
-codeMessage[20000]=\u6210\u529F
+codeMessage[20000]=\u521B\u5EFA\u6210\u529F
+codeMessage[20001]=\u5BA1\u6838\u901A\u8FC7
+codeMessage[20002]=\u5BA1\u6838\u4E0D\u901A\u8FC7
+codeMessage[20003]=\u5BA1\u6279\u901A\u8FC7
+codeMessage[20004]=\u5BA1\u6279\u4E0D\u901A\u8FC7
+codeMessage[20005]=\u9700\u6C42\u5DF2\u63D0\u4EA4
+codeMessage[20006]=\u9700\u6C42\u5DF2\u4FDD\u5B58
+codeMessage[20007]=\u62A5\u4EF7\u5DF2\u63D0\u4EA4
+codeMessage[20008]=\u62A5\u4EF7\u5DF2\u4FDD\u5B58
