合同创建接口的实现

--- a/src/main/resources/code-message.properties
+++ b/src/main/resources/code-message.properties
@@ -7,5 +7,7 @@ codeMessage[20005]=\u9700\u6C42\u5DF2\u63D0\u4EA4
 codeMessage[20006]=\u9700\u6C42\u5DF2\u4FDD\u5B58
 codeMessage[20007]=\u62A5\u4EF7\u5DF2\u63D0\u4EA4
 codeMessage[20008]=\u62A5\u4EF7\u5DF2\u4FDD\u5B58
+codeMessage[20009]=\u5408\u540C\u9644\u4EF6\u5DF2\u4E0A\u4F20
+codeMessage[20010]=\u5408\u540C\u521B\u5EFA\u6210\u529F
 
 codeMessage[50000]=\u7CFB\u7EDF\u51FA\u73B0\u9519\u8BEF
