--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-
-
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
 
         <!--处理properties文件获取数据-->
