--- a/src/main/resources/code-message.properties
+++ b/src/main/resources/code-message.properties
@@ -10,4 +10,9 @@ codeMessage[20008]=\u62A5\u4EF7\u5DF2\u4FDD\u5B58
 codeMessage[20009]=\u5408\u540C\u521B\u5EFA\u6210\u529F
 codeMessage[20010]=\u5408\u540C\u6267\u884C\u5B8C\u7ED3
 
+codeMessage[20011]=\u6279\u91CF\u5BA1\u6838\u901A\u8FC7
+codeMessage[20012]=\u6279\u91CF\u5BA1\u6838\u4E0D\u901A\u8FC7
+codeMessage[20013]=\u6279\u91CF\u5BA1\u6279\u901A\u8FC7
+codeMessage[20014]=\u6279\u91CF\u5BA1\u6279\u4E0D\u901A\u8FC7
+
 codeMessage[50000]=\u7CFB\u7EDF\u51FA\u73B0\u9519\u8BEF
