--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/deal?serverTimezone=Asia/Shanghai
-    username: chenli
-    password: 190014
+    username: root
+    password: 123456
   application:
     name: deal
   redis:
